# numc

./: CMakeLists.txt  README.MD  main.cpp  ndarray.cpp  ndarray_parallel.cpp  ndarray_safe.cpp  numc.cpp  numc_modify.cpp  numc_safe.cpp
